test/fixture/invalid/importCycleC.scrypt
import "./importCycleA.scrypt";

contract C {
  public function main() {
    require(true);
  }
}